--- a/angular-ui/.gitignore
+++ b/angular-ui/.gitignore
@@ -31,6 +31,7 @@ speed-measure-plugin*.json
 !.vscode/extensions.json
 .history/*
 
+
 # misc
 /.sass-cache
 /connect.lock
@@ -40,7 +41,18 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+/e2e
+/.vscode
+.browserslistrc
+.editorconfig
+karma.config
+tslint 
+tsconfig.spec
+tsconfig.app
+tsconfig.base
 
 # System Files
 .DS_Store
 Thumbs.db
+
+
